<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongEditFragment">

    <LinearLayout
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/editNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editSongTitle" />

            <EditText
                android:id="@+id/editSongTitleBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editSongTitle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editArtistLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editSongArtist" />

            <EditText
                android:id="@+id/editArtistBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editSongArtist" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editGenreLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editSongGenre" />

            <EditText
                android:id="@+id/editGenreBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editSongGenre" />

        </LinearLayout>

        <Button
            android:id="@+id/saveChangesBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/submitChanges" />

    </LinearLayout>

</FrameLayout>